--- a/style.css
+++ b/style.css
@@ -133,6 +133,18 @@ h1{
         width:0%;
     }
 }
+@media screen and (max-width: 450px) {
+    .Toast{
+        width:70vw;
+    }
+    .Toast svg{
+        margin: 5px !important;
+        margin-right: 0px;
+    }
+    .Toast p{
+        font-size: 12px;
+    }
+}
 .bodyCheck:hover{
     cursor:pointer;
 }
